weather and crop disease alerts and document storage

--- a/innnotech.html
+++ b/innnotech.html
@@ -175,3 +175,27 @@
 
     <p id="diseaseResult"></p>
 </section>
+<section class="card">
+    <h2>Nearby Input Stores & Suppliers</h2>
+
+    <label>Select State</label>
+    <select id="storeState">
+        <option value="">Select State</option>
+        <option value="Telangana">Telangana</option>
+        <option value="Andhra Pradesh">Andhra Pradesh</option>
+        <option value="Punjab">Punjab</option>
+        <option value="Maharashtra">Maharashtra</option>
+    </select>
+
+    <label>Select Input Type</label>
+    <select id="inputType">
+        <option value="">Select Input</option>
+        <option value="Seeds">Seeds</option>
+        <option value="Fertilizers">Fertilizers</option>
+        <option value="Equipment">Equipment</option>
+    </select>
+
+    <button onclick="showSuppliers()">Find Suppliers</button>
+
+    <p id="storeResult"></p>
+</section>
